corrigindo as imagens

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <p>Minhoca fumando em full hd <br>Translation:<br> Worm smoking in full hd</p>
     </div>
     <div class="image">
-        <img src="imagens/worm.jpeg">
+        <img src="worm.jpeg">
     </div>
     <div class="text">
         <h2>Ainda não acabou.</h2>
         <p>Fique com mais algumas versões dela. </p>
     </div>
     <div class="image">
-        <img src="imagens/haha.jpg">
+        <img src="haha.jpg">
     </div>
     <div class="text">
         <h2>Sobre:<br>Versão mais "humilde"<br> e perigosa.</h2>
@@ -36,7 +36,7 @@
         </p>
     </div>
     <div class="image">
-        <img src="imagens/hahaha.png">
+        <img src="hahaha.png">
     </div>
     <div class="text">
         <h2>Sobre:<br>Versão feita à mão.</h2>
@@ -44,7 +44,7 @@
         </p>
     </div>
     <div class="bye">
-    <img src="imagens/bye.jpg">
+    <img src="bye.jpg">
     </div>
     <div class="text">
         <h2>Infelizmente chegamos ao fim,<br> as saudades serão eternas.</h2>
