--- a/index.html
+++ b/index.html
@@ -43,13 +43,53 @@
         <p>"Essa versão apresenta características mais catoonizadas e rústicas."
         </p>
     </div>
-    <div class="bye">
-    <img src="bye.jpg">
+
+    <div class="text"> <h2>Acabaram as fotos de minhocas, porem ainda tem alugns elementos HTML/CSS pra deixar ai :</h2> </div>
+    <div class="text">
+        <p>Uma lista genérica.</p>
+        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, sit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, dignissimos?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, ipsam pariatur.</li>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam tempore fuga maxime.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero sed consequuntur facilis eius!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, alias molestias. Consequuntur.</li>
+    </div>
+    <div id="content">
+        <div id="table">
+            <div class="text">
+                <p>E por último, uma tabela.</p>
+            </div>
+            <table>
+                <tr>
+                    <th>Lorem ipsum dolor sit amet.</th>
+                    <th>Lorem ipsum dolor sit amet.</th>
+                    <th>Lorem ipsum dolor sit amet.</th>
+                </tr>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                </tr>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                </tr>
+            </table>
+        </div>
     </div>
     <div class="text">
         <h2>Infelizmente chegamos ao fim,<br> as saudades serão eternas.</h2>
         <p>
             Não fique triste porque acabou, fique feliz porque aconteceu.</p>
+    </div>
+    <div class="bye">
+        <img src="bye.jpg">
     </div>
 </body>
 </html>
